refactoring scss (eg. changing class naming, removing unncessary classes)

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,5 +1,6 @@
 .button {
   padding: 0.7rem 1rem;
+  margin: 1.5rem 0;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.05rem;
