--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,12 +1,10 @@
 @import "custom";
 @import "elements/_navbar";
 @import "elements/landingPageHero";
-@import "elements/_introText";
 @import "elements/_landingPageOffer";
 @import "elements/_landingPageAboutMe";
-@import "elements/_aboutMe";
 @import "elements/_aboutMediation";
-@import "elements/_contact";
+@import "elements/contactForm";
 @import "elements/_footer";
 @import "components/_typography";
 @import "components/_buttons";
