--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -1,7 +1,3 @@
-.footer {
-  background-color: $primary;
-}
-
 .contactIcon {
   display: inline;
   color: white;
@@ -14,7 +10,7 @@
   }
 }
 
-.footer-text {
+.footerText {
   font-size: 0.875rem;
   color: white;
   display: inline;
