--- a/src/scss/elements/_landingPageAboutMe.scss
+++ b/src/scss/elements/_landingPageAboutMe.scss
@@ -1,12 +1,3 @@
-.landing-aboutMe {
+.landingAboutMe {
   background-color: $lightgrey;
-
-
-  &-img {
-    width: 70%;
-
-    @include media-breakpoint-up(xl) {
-      width: 65%;
-    }
-  }
 }
