removed unused classes from html; extracted reusable classes for positioning content

--- a/src/scss/components/_positioning.scss
+++ b/src/scss/components/_positioning.scss
@@ -21,3 +21,15 @@
   }
 }
 
+.section-container {
+  margin-top: 3rem;
+}
+
+.main-content {
+  padding: 1.5rem;
+
+  @include media-breakpoint-up(xxl) {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+}
