--- a/src/scss/elements/_landingPageHero.scss
+++ b/src/scss/elements/_landingPageHero.scss
@@ -30,9 +30,11 @@
     font-weight: 400;
     line-height: 1.2;
     color: $primary;
+    text-align: center;
 
     @include media-breakpoint-up(sm) {
       font-size: 1.6rem;
+      text-align: left;
     }
     @include media-breakpoint-up(md) {
       font-size: 1.8rem;
@@ -51,12 +53,14 @@
   &-desc {
     padding-bottom: 0.1rem;
     margin: 0;
+    text-align: center;
 
     &:last-of-type {
       padding-bottom: 1rem;
     }
     @include media-breakpoint-up(sm) {
       font-size: 1.2rem;
+      text-align: left;
     }
 
     @include media-breakpoint-up(md) {
